--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <div class="grid-container"></div>
+        <div class="start-button-container">
+            <button class="start-button">Start</button>
+        </div>
         <script type="module" src="controller.js"></script>
     </body>
 </html>
